--- a/notebooks/00_Intro.ipynb
+++ b/notebooks/00_Intro.ipynb
@@ -17,16 +17,18 @@
     "(Integrated Development Environment). \n",
     "\n",
     "- **Configuration**: Almost all settings can be adjusted in the Command Palette \n",
-    "  by hitting `Ctrl+Shift+P`. Try it out with by searching for `Color Theme` and \n",
-    "  trying out the options.\n",
+    "  by hitting `Ctrl+Shift+P`. \n",
+    "    - Try it out with by searching for `Color Theme` and trying out the options.\n",
+    "    - `.vscode` folder contains the settings/extensions set for this course by\n",
+    "      default (including code auto-formatting on save).\n",
     "- **File navigation**: The bar on the left shows files in the current directory. \n",
-    "  Selecting a different file will open it in a new tab. The 'Outline' section \n",
-    "  below shows an overview of sections of the current file.\n",
+    "    - Selecting a different file will open it in a new tab.\n",
+    "    -  The 'Outline' section shows an overview of sections of the current file.\n",
     "- **Additional Views**: \n",
+    "  - Jupyter: Command Palette `Jupyter: Focus Jupyter Variables View` to see any \n",
+    "    variables we've defined. Try opening this now.\n",
     "  - Terminal: ``    Ctrl+Shift+` `` or Command Palette `Focus Terminal` for \n",
-    "    running commnand line\n",
-    "  - Jupyter: Command Palette `Jupyter: Focus on Cell Tags View` to see any \n",
-    "    variables we've defined"
+    "    running commnand line. Save this for later.\n"
    ]
   },
   {
@@ -95,7 +97,11 @@
     "1. Let's try adding a cell below this one by clicking on it and hitting `b`. \n",
     "  By default, new cells will be in Python.\n",
     "1. Once created, try changing it to a markdown cell (`m`) and adding some bold \n",
-    "  text with `**your text**`"
+    "  text with `**your text**`\n",
+    "\n",
+    "**NOTE**: If new cells are not labeled 'Python' in the bottom-right, open the \n",
+    "command pallete and run 'Select Interpreter'. Choose the option labeled \n",
+    "'Recommended'. "
    ]
   },
   {
@@ -136,17 +142,9 @@
    "execution_count": null,
    "id": "63906c5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Hello, world!')"
+    "print(\"Hello, world!\")"
    ]
   },
   {
@@ -168,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5ad0c54a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=1"
+    "a = 1"
    ]
   },
   {
@@ -196,6 +194,7 @@
     "\n",
     "## Basic Types\n",
     "\n",
+    "- Booleans (`bool`): True or False\n",
     "- Integers (`int`): Whole numbers (-1, 0, 5)\n",
     "- Floating point numbers (`float`): Precise numbers (-0.5, 3.001)\n",
     "- Strings (`str`): Sets of characters ('Hello!', '$30', '1 car', '11')\n",
@@ -222,44 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7c291d40",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "1+1"
+    "1 + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f123c85b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "10-(1*0)"
+    "10 - (1 * 0)"
    ]
   },
   {
@@ -267,105 +244,96 @@
    "execution_count": null,
    "id": "c63a3fe0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(2**3) + (1/2)"
+    "(2**3) + (1 / 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6624a85a",
+   "execution_count": null,
+   "id": "1ed9a872",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "101 / 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea633d4c",
+   "metadata": {},
+   "source": [
+    "Try writing some examples to explore the difference between `/` and `//`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ae65304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "101 / 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11d850ab",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "101 // 10"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf60bcee",
+   "metadata": {},
+   "source": [
+    "Underscores within numbers are used as a convention to replace commas.\n",
+    "For example, `1,234` -> `1_234`, but they have no actual effect"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b779976d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "52 % 5"
+    "1_000_003 % 1_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "4abfb408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1_2 // 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84d35aa5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.01.0'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'1.0' * 2"
+    "\"1.0\" * 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6c1d2689",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for /: 'str' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[33;43m'\u001b[39;49m\u001b[33;43m10\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m.5\u001b[39;49m\n",
-      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for /: 'str' and 'float'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'10' / .5"
+    "\"10\" / 0.5"
    ]
   },
   {
@@ -382,23 +350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "eceb2ad2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "float('1.0') * 2"
+    "float(\"1.0\") * int(\"2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1568be9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str(1.0) + str(2)"
    ]
   },
   {
@@ -406,7 +373,7 @@
    "id": "945a7c1a",
    "metadata": {},
    "source": [
-    "## Variable assignment \n",
+    "# Variable assignment \n",
     "\n",
     "To reuse values, it's helpful to assign then to a variable. Variable names must \n",
     "only use letters, numbers, and underscores. And, by convention, they should \n",
@@ -445,12 +412,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2614bbbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "_WorksButNotRecommended = 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49073e5b",
+   "metadata": {},
+   "source": [
+    "Comments help keep notes within code. Everything after `#` is ignored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32061a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_variable = 4\n",
+    "print(my_variable * 2)  # This is a comment. `print` is used to show output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04472f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiple, assignment = 4, 5  # Set the value of multiple variables at once"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b8d4a43",
+   "metadata": {},
+   "source": [
+    "## Comparing Variables \n",
+    "\n",
+    "It's helpful to compare variables to one another. This process typically \n",
+    "returns a boolean value.\n",
+    "\n",
+    "- `==`: Equal to \n",
+    "- `!=`: Not equal to \n",
+    "- `<` or `>` : Less/Greater than \n",
+    "- `<=` or `=>` : Less/Greater than or equal to "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "456e8da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 + 1 == 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d9ca6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"hello\" == \"Hello\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31238419",
+   "metadata": {},
+   "source": [
+    "We can combine these with parentheses, `not`, `or` and `and` to resolve more \n",
+    "complicated logic. \n",
+    "\n",
+    "- `not`: Flip the value of the boolean \n",
+    "- `and`: Return `True` only if both parts are `True`\n",
+    "- `or`: Return `True` if one or both parts are `True` \n",
+    "- `()`: Evaluate enclosed part before the rest, like algebra\n",
+    "\n",
+    "See if you can predict the outcome of each of these..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be21b72c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(1 < 2) and (2 < 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3006ced2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 + 1 == 2 and 2 + 2 != 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "136f1d49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\"a\" == \"1\") or not True and 1 <= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "087c4815",
+   "metadata": {},
+   "source": [
+    "## Conditional outcomes \n",
+    "\n",
+    "'Control flow' refers to the conitional execution of code depending on evaluated\n",
+    "outcomes. \n",
+    "\n",
+    "- `if`: Condition testing  \n",
+    "- `elif`: Alternative condition (else if)\n",
+    "- `else`: All other cases "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f196e440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if isinstance(my_variable, int):\n",
+    "    print(\"my_variable is an integer\")\n",
+    "elif isinstance(my_variable, float):\n",
+    "    print(\"my_variable is a float\")\n",
+    "else:\n",
+    "    print(\"my_variable is neither an integer nor a float\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "018076b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age = 17\n",
+    "print(\"This is an adult\" if age >= 18 else \"This is a minor\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "923c4cfb",
+   "metadata": {},
+   "source": [
+    "## Variables in strings \n",
+    "\n",
+    "An 'f-string' is a way to insert variables into strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d6b0003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"This is the value of my_variable: {my_variable}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d26d4e56",
+   "metadata": {},
+   "source": [
+    "F-strings can be formatted for the desired level of rounding and padding:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17099464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi = 3.14159\n",
+    "print(f\"The value of pi is approximately: {pi:.2f}\")  # 2 decimal places"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e73dc7b",
+   "metadata": {},
+   "source": [
+    "## Clearing Variables \n",
+    "\n",
+    "The `Jupyter Variables` view we opened now has a set of variables defined. We\n",
+    "can get rid of individual ones with the `del` keyword, or clear them all by \n",
+    "restarting the notebook.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "671c8ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2491d932",
+   "metadata": {},
+   "source": [
+    "## Variable Operators (Advanced)\n",
+    "Some operators only modify existing variables. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d2c4a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_variable = 5\n",
+    "my_variable += 1  # -> 6\n",
+    "my_variable *= 2  # -> 12\n",
+    "my_variable /= 6  # -> 2\n",
+    "my_variable -= 1  # -> 1\n",
+    "print(my_variable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff349bb",
+   "metadata": {},
+   "source": [
+    "# Functions (Advanced)\n",
+    "\n",
+    "We've already seen `print` as a built-in function. Here are a few others to try \n",
+    "out on the basic types...\n",
+    "\n",
+    "- `len(var)`: length\n",
+    "- `abs(var)`: absolute value\n",
+    "- `isinstance(var, type)`: True if `var` is of given type(s)\n",
+    "- `type(var)`: Return the type of a given variable\n",
+    "\n",
+    "Can you predict the outcome of the following?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d99da6fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isinstance(len(\"Hello\"), (float, str))  # (float, str) -> \"either float or str\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aff7a2e",
+   "metadata": {},
+   "source": [
+    "We can define our own functions using the `def`/`return` keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea0d247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_if_above_threshold(x: int, threshold: float = 1.5) -> float:\n",
+    "    \"\"\"Adds x to the threshold if x is greater than the threshold.\n",
+    "\n",
+    "    This is a docstring that describes the function's purpose and behavior.\n",
+    "\n",
+    "    Args:\n",
+    "        x (int): The number to check against the threshold.\n",
+    "        threshold (float, optional): The threshold value. Defaults to 1.5.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The result of adding x to the threshold if x is greater than the\n",
+    "            threshold, otherwise returns x as a float.\n",
+    "    \"\"\"\n",
+    "    if x > threshold:\n",
+    "        return x + threshold  # else not required because the function ends here\n",
+    "    return float(x)\n",
+    "\n",
+    "\n",
+    "print(f\"Above {add_if_above_threshold(2)}\")\n",
+    "print(f\"Below {add_if_above_threshold(x=1, threshold=2.1)}\")\n",
+    "\n",
+    "assignment = add_if_above_threshold(3, 2.5)\n",
+    "print(f\"Also  {assignment}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4b78a6bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def has_letter_a(s: str) -> bool:\n",
+    "    if not isinstance(s, str):\n",
+    "        raise TypeError(\"Input must be a string\")\n",
+    "    count_a = s.lower().count(\"a\")  # string to lowercase, then counting `a`s\n",
+    "    return count_a > 0\n",
+    "\n",
+    "\n",
+    "print(has_letter_a(\"Hello\"))\n",
+    "print(has_letter_a(\"Apple\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae8ce968",
+   "metadata": {},
+   "source": [
+    "We don't see `count_a` reflected in the variables panel because this is a 'local'\n",
+    "variable. 'global' variables are available everywhere, but Python encapsulates \n",
+    "the function."
    ]
   }
  ],
