Disable pylint undefined warn. Blackify notebooks

--- a/notebooks/01_Iteration.ipynb
+++ b/notebooks/01_Iteration.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "for value in [1, 2, 3, 4, 5]:\n",
     "    if value == 3:\n",
-    "        continue # skip the rest of the loop for this iteration\n",
+    "        continue  # skip the rest of the loop for this iteration\n",
     "    print(value * 2)"
    ]
   },
@@ -88,7 +88,7 @@
     "my_list = list(range(10))\n",
     "\n",
     "print(f\"First: {my_list[0]}\")\n",
-    "print(f\"Last: {my_list[-1]}\")\n"
+    "print(f\"Last: {my_list[-1]}\")"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict1 = {'a': 1, 'b': 2, 'c': 3}\n",
+    "dict1 = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
     "dict2 = dict(a=1, b=2, c=3)  # Using keyword arguments\n",
     "print(dict1 == dict2)  # True, both dictionaries are equal"
    ]
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict1['a'] == 1"
+    "dict1[\"a\"] == 1"
    ]
   },
   {
@@ -176,8 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict1['d'] = 4  # Adding a new key-value pair\n",
-    "dict1['b'] = 0  # Updating an existing key-value pair"
+    "dict1[\"d\"] = 4  # Adding a new key-value pair\n",
+    "dict1[\"b\"] = 0  # Updating an existing key-value pair"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict1['f']"
+    "dict1[\"f\"]"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict1.get('f') == None  # Returns None if the key 'f' does not exist"
+    "dict1.get(\"f\") == None  # Returns None if the key 'f' does not exist"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict1.get('f', 0) == 0  # Returns 0 if the key 'f' does not exist"
+    "dict1.get(\"f\", 0) == 0  # Returns 0 if the key 'f' does not exist"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "for key in dict1.keys():\n",
     "    print(f\"Key: {key}, Value: {dict1[key]}\")\n",
     "for key in dict2:  # keys() is implicitly called\n",
-    "    print(f\"Key: {key}, Value: {dict2[key]}\")\n"
+    "    print(f\"Key: {key}, Value: {dict2[key]}\")"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for letter in 'abc':\n",
+    "for letter in \"abc\":\n",
     "    print(f\"Letter: {letter}\")"
    ]
   },
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, letter in enumerate('abc'):\n",
+    "for index, letter in enumerate(\"abc\"):\n",
     "    print(f\"Index: {index}, Letter: {letter}\")"
    ]
   },
@@ -344,8 +344,8 @@
    "source": [
     "import os\n",
     "\n",
-    "if os.getcwd().endswith('notebooks'):\n",
-    "    os.chdir('..')\n",
+    "if os.getcwd().endswith(\"notebooks\"):\n",
+    "    os.chdir(\"..\")\n",
     "\n",
     "from src.dna import validator\n",
     "\n",
@@ -368,7 +368,7 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "ret = 'something'\n",
+    "ret = \"something\"\n",
     "\n",
     "validator(s, ret)  # Validate your answer"
    ]
@@ -408,7 +408,7 @@
    "outputs": [],
    "source": [
     "with open(\"data/rosalind_dna.txt\", \"r\") as file:\n",
-    "    s = file.read().strip() # Get a larger DNA sequence from a file\n",
+    "    s = file.read().strip()  # Get a larger DNA sequence from a file\n",
     "\n",
     "# Your code here"
    ]
