--- a/notebooks/02_StringMethods.ipynb
+++ b/notebooks/02_StringMethods.ipynb
@@ -32,21 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lower:  hello world\n",
-      "upper:  HELLO WORLD\n",
-      "title:  Hello World\n",
-      "caps :  Hello world\n",
-      "swap :  hello WORLD\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_string = \"HELLO world\"\n",
     "print(\"lower: \", my_string.lower())  # Convert to lowercase\n",
@@ -66,28 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AA upper:  True\n",
-      "aa lower:  True\n",
-      "AA title:  False\n",
-      "Start H : True\n",
-      "End d   : True\n",
-      "Contains 'lo' : False\n",
-      "Count 'l's    : 1\n",
-      "Index of 'l'  : 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"AA upper: \", \"AA\".isupper())\n",
     "print(\"aa lower: \", \"aa\".islower())\n",
-    "print(\"AA title: \", \"AA\".istitle())\n",
+    "print(\"AA title: \", \"AA\".istitle())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And many others that check for substrings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"Start H :\", my_string.startswith(\"H\"))  # Check if starts with 'H'\n",
     "print(\"End d   :\", my_string.endswith(\"d\"))  # Check if ends with 'd'\n",
     "print(\"Contains 'lo' :\", \"lo\" in my_string)  # Check if contains 'lo'\n",
@@ -105,17 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HEXXO world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(my_string.replace(\"L\", \"X\"))"
    ]
@@ -136,22 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Upper:  H\n",
-      "Upper:  E\n",
-      "Upper:  L\n",
-      "Upper:  L\n",
-      "Upper:  O\n",
-      "Assembled:  WORLD\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assembled = \"\"\n",
     "for char in my_string:\n",
@@ -164,17 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HELLO\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(my_string[0:5])  # Slice the string from index 0 to 4"
    ]
@@ -188,17 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"*\" * 10)  # Repeat the asterisk 10 times"
    ]
@@ -212,17 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['HELLO', 'world']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(my_string.split(\" \"))  # Split the string by spaces"
    ]
@@ -253,17 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reordered:  First.Second.Third\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_string = \"Third.First.Second\"\n",
     "new_list = new_string.split(\".\")  # Split the string by '.'\n",
@@ -294,22 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I have \"double\" quotes\n",
-      "I have 'single' quotes\n",
-      "I have both 'single' and \"double\" quotes\n",
-      "I have \n",
-      "\t- new lines \n",
-      "\t- tabs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('I have \"double\" quotes')\n",
     "print(\"I have 'single' quotes\")\n",
@@ -326,19 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My \n",
-      "multiline \n",
-      "string\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\n",
     "    \"\"\"My \n",
@@ -375,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,20 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -428,27 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length mismatch: DNA has 23 characters, RNA has 5 characters\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code here\n",
     "rna_result = \"AAAAA\"\n",
@@ -479,27 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RNA string contains invalid character(s): {'s', 'h', 'e', 't', 'i', 'n', 'g', 'o', 'm'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"data/rosalind_rna.txt\", \"r\") as file:\n",
     "    t = file.read().strip()  # Get a larger DNA sequence from a file\n",
@@ -608,23 +473,23 @@
     "<details><summary>Other methods</summary>\n",
     "\n",
     "- `str.translate()`: Create a translation table for character mapping\n",
-    "- `map()`: Apply a function to each character\n",
+    "- `map()`: Apply a function to each element in an iterable\n",
     "\n",
     "Example with translate:\n",
     "\n",
     "```python\n",
-    "translation_table = str.maketrans(\"T\", \"U\")\n",
-    "rna_result = t.translate(translation_table)\n",
+    "translation_table = str.maketrans(\"A\", \"B\")\n",
+    "result = t.translate(translation_table)\n",
     "```\n",
     "\n",
     "Example with map: \n",
     "\n",
     "```python\n",
-    "def swap_u(s):\n",
-    "    return \"U\" if s == \"T\" else s\n",
+    "def custom_func(s):\n",
+    "    return 'A' if s.isupper() else 'B'\n",
     "\n",
     "\n",
-    "\"\".join(list(map(swap_u, \"ABCTTG\")))\n",
+    "\"\".join(list(map(custom_func, \"input\")))\n",
     "```\n",
     "\n",
     "</details>\n",
@@ -636,41 +501,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ABCUUG'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your alternative solution here\n",
-    "\n",
-    "\n",
-    "# Bonus: Create a reverse function that converts RNA back to DNA\n",
-    "def rna_to_dna(rna_string):\n",
-    "    # Your code here\n",
-    "    pass"
+    "# Your alternative solution here"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
